# deg2tfbs

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  temp.md
configs/: example.yaml
pipeline/: deg_analysis.py  tf_fetcher.py  tfbs_fetching.py  utils.py
pipeline/dataloader/: bie.py  ceroni.py  deter.py  emani.py  jovanovic.py  mori.py  radzikowski.py  rajacharya.py  schmidt.py  utils.py  wu.py  zhu.py
pipeline/deg_fetcher/batch_20250130/csv/: bie_downregulated_degs.csv  ceroni_upregulated_degs.csv  deter_upregulated_degs.csv  emani_upregulated_degs.csv  jovanovic_downregulated_degs.csv  jovanovic_upregulated_degs.csv  (+4 more)
pipeline/degfetcher/: bie.py  ceroni.py  deter.py  durfee.py  emani.py  gummesson.py  houser.py  jovanovic.py  kim.py  lu.py  mori.py  radzikowski.py  rajacharya.py  sanchez_vasquez.py  schmidt.py  utils.py  vazulka.py  wu.py  zhang.py  zhu.py
pipeline/tfbsfetcher/: tfbsfetcher.py
pipeline/tfbsfetcher/parsers/: __init__.py
pipeline/tffetcher/: tffetcher.py
pipeline/tffetcher/parsers/: __init__.py
pipeline/tffetcher/tfbatch_20250130/: deg2tf_mapping.csv
src/deg2tfbs/: main.py
src/deg2tfbs/analysis/: analysis-docs.md  compare.py  data.py  main.py  plot_tf_roster_clustering.py  plot_tf_roster_heatmap.py  plot_tfbs_counts.py  plot_tfbs_length_density.py  roster.py  tf_cluster_merger.py
src/deg2tfbs/configs/: example.yaml  example3.yaml  example4.yaml
src/deg2tfbs/pipeline/: filtering.py  utils.py
src/deg2tfbs/tests/: test_tfbsparsers.py
tests/: __init__.py  test_tfbsfetcher.py
(+286 files in other folders)
