[project]
name           = "deg2tfbs"
version        = "0.2.0"
description    = "Pipeline for DEG → TF → TFBS inference."
authors        = [{name = "Eric South", email = "ericjohnsouth@gmail.com"}]
readme         = "README.md"
requires-python = ">=3.9"

# Runtime dependencies (pin *ranges*, not exact versions)
dependencies = [
  "numpy >=1.26,<3.0",
  "pandas >=2.2,<3.0",
  "scipy  >=1.10,<2.0",
  "scanpy >=1.10,<2.0",
  "statsmodels >=0.14,<1.0",
  "matplotlib >=3.7,<4.0",
  "pyyaml >=6.0,<7.0",
  "seaborn >=0.13,<1.0",
  "torch >=2.5,<3.0",
  "torchvision >=0.20,<1.0",
  "torchaudio >=2.5,<3.0",
  "python-dateutil >=2.9,<3.0",
  "pytz >=2025.2,<2026.0",
  "openpyxl >=3.0,<4.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]